SF Primes/src/objects/ALL_Decision_Box_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Assignment_sObject__c</fullName>
        <label>Assignment sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConditionCheck_sObject__c</fullName>
        <label>ConditionCheck sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_Check__c</fullName>
        <label>Condition Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Flag_Field__c</fullName>
        <label>Flag Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Assignment__c</fullName>
        <label>Value Assignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ALL Decision Box Settings</label>
</CustomObject>